[gd_scene load_steps=2 format=3 uid="uid://bi0kmmrxapvsd"]

[ext_resource type="Script" uid="uid://c8fkc7jb5u0wx" path="res://examples/purchase_verification_example.gd" id="1_1u7xj"]

[node name="PurchaseVerificationExample" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1u7xj")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "Purchase Verification Example"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="KeyLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Download Key (or URL):"

[node name="KeyInput" type="LineEdit" parent="VBox"]
layout_mode = 2
placeholder_text = "Enter download key or full itch.io download URL"

[node name="APIKeyLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "API Key:"

[node name="APIKeyInput" type="LineEdit" parent="VBox"]
layout_mode = 2
placeholder_text = "Your itch.io API key"
editable = false

[node name="GameIDLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Game ID:"

[node name="GameIDInput" type="LineEdit" parent="VBox"]
layout_mode = 2
placeholder_text = "Your game's numeric ID"
editable = false

[node name="VerifyButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Verify Download Key"

[node name="HSeparator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Ready"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="ResultArea" type="RichTextLabel" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Results will appear here..."
fit_content = true
